[BUGFIX] Slightly increase contrast for succes, info, warning

--- a/Resources/Public/Scss/bootstrap5/_variables.scss
+++ b/Resources/Public/Scss/bootstrap5/_variables.scss
@@ -19,9 +19,9 @@ $tertiary:                          #758c7f !default;
 $quaternary:                        #2d1e2f !default;
 
 $default:                           #eaebec !default;
-$success:                           #5cb85c !default;
-$info:                              #319fc0 !default;
-$warning:                           #f0ad4e !default;
+$success:                           #3a833a !default;
+$info:                              #287f9a !default;
+$warning:                           #a4660e !default;
 $danger:                            #d4403a !default;
 $lighter:                           $gray-100 !default;
 $light:                             $gray-200 !default;
